cm-super (0.3.3-6) unstable; urgency=low

  * change README.Debian encoding to UTF8 (thanks Ralf for noticing)
  * change maintainer email to debian-tex-maint ML, add myself to the
    Uploaders
  * create cm-super-minimal package (too many changes to list)
  * remove upgrade code from old-stable version from cm-super.preinst

 -- Norbert Preining <preining@debian.org>  Fri, 18 May 2007 22:57:23 +0200

cm-super (0.3.3-5) unstable; urgency=low

  * remove the X11R7 scale file as it never entered testing and the
    X11R7 hierachy under /e/X/ is deprecated now.

 -- Norbert Preining <preining@logic.at>  Fri,  2 Jun 2006 23:22:11 +0200

cm-super (0.3.3-4) unstable; urgency=low

  * Switch to dh_installtex usage, adapt the control file, remove the
    respective stuff in the maintainer scripts
  * Add encoding entries for microsoft-cp1251 and iso8859-5 (Closes: #332672)
  * X fonts transition (Closes: #362324)
    - Move pfb/afm links from X11R6 hierachy to /usr/share/fonts/X11
    - remove lintian override file
    - build-depends to debhelper >= 5.0.31
    - adapt location of file in defoma hints file
    - remove installation of X11R6/fonts/Type1 directory
    - install .scale file into /e/X11/fonts/X11R7/Type1
  * bump standards version to 3.7.2, changes are font transition (see above)
  * move the dir creation from package.dirs to the rules file
  * move the t1c file to /usr/share/cm-super, and empty it after installation
    of the fonts. Adjust the md5sum magic for including the right md5sum for
    the empty file cm-super.t1c. Add an md5sum override to cm-super.override.
    (Closes: #365013)
  * change GPL to GPLv2 in copyright file

 -- Norbert Preining <preining@logic.at>  Thu, 18 May 2006 13:20:19 +0200

cm-super (0.3.3-3) unstable; urgency=low

  * move map files to /usr/share/texmf/fonts/map/dvips/cm-super
  * change texlive dependencies after name change of packages
  * adapted maintainer scripts to be more silent