@@ -1,0 +1,25 @@
+#!/bin/sh -e
+
+case "$1" in
+    configure)
+        # remove /usr/share/doc/cm-super-x11 directory and make it a link
+	if ! [ -L /usr/share/doc/cm-super-x11 ] ; then
+	  # it should not contain anything by now ...
+	  rmdir /usr/share/doc/cm-super-x11
+	  ln -s cm-super-minimal /usr/share/doc/cm-super-x11
+	fi
+    ;;
+
+    abort-upgrade|abort-remove|abort-deconfigure)
+    ;;
+
+    *)
+        echo "postinst called with unknown argument \`$1'" >&2
+        exit 1
+    ;;
+esac
+
+
+#DEBHELPER#
+
+exit 0
