@@ -3,9 +3,15 @@
 # Extract the .pfb files
 case "$1" in
     configure)
+        # remove /usr/share/doc/cm-super directory and make it a link
+	if ! [ -L /usr/share/doc/cm-super ] ; then
+	  # it should not contain anything by now ...
+	  rmdir /usr/share/doc/cm-super
+	  ln -s cm-super-minimal /usr/share/doc/cm-super
+	fi
     	cd /usr/share/texmf/fonts/type1/public/cm-super
 	tempfile=`mktemp -p /tmp cm-super.checkrun.XXXXXXXX`
-	echo -n "Creating fonts. This may take some time. ..."
+	echo -n "Creating fonts. This may take some time..."
 	set +e
 	t1c2pfb </usr/share/cm-super/cm-super.t1c > $tempfile 2>&1
 	if [ $? = 0 ] ; then
