@@ -5,8 +5,9 @@ cm-super (0.3.3-6) unstable; urgency=low
     Uploaders
   * create cm-super-minimal package (too many changes to list)
   * remove upgrade code from old-stable version from cm-super.preinst
+  * make /u/s/d/cm-super(-x11) links to cm-super-minimal
 
- -- Norbert Preining <preining@debian.org>  Fri, 18 May 2007 22:57:23 +0200
+ -- Norbert Preining <preining@debian.org>  Wed, 08 Aug 2007 16:29:31 +0200
 
 cm-super (0.3.3-5) unstable; urgency=low
 
